<resources>
    <string name="app_name">ToolShare</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_now">Login Now</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or_sign_in_with_email">or sign in with email</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Signup</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="city">City</string>
    <string name="tool_img">tool img</string>
    <string name="profile">Profile</string>
    <string name="my_tools">My tools</string>
    <string name="sign_out">Sign out</string>
    <string name="call">Call</string>
    <string name="add_to_widget">add to widget</string>
    <string name="tool_name">Tool name</string>
    <string name="available">Available</string>
    <string name="chose_phote">Chose phote</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="add_tool">Add tool</string>
    <string name="add">Add</string>
    <string name="add_picture">Add Picture</string>
    <string name="choose_photo">choose photo</string>
    <string name="continue_your_signin">Continue your Signin</string>
    <string name="finish">Finish</string>
    <string name="web_client_id">967542148215-cev9h0vl9ods755dkscihgm14eflevcc.apps.googleusercontent.com</string>
    <string name="the_added_photo_picture">the added photo picture</string>
    <string name="sign_in_with_google_button">sign in with google button</string>
    <string name="profile_picture">profile picture</string>
    <string name="owner_img">owner img</string>
    <string name="delete_img">delete img</string>
    <string name="title_add_tool">Add Tool</string>
    <string name="fill_all">Please fill all the fields!</string>
    <string name="uploaded">Uploaded</string>
    <string name="failed">Failed</string>
    <string name="auth_faild">Authentication Failed.</string>
    <string name="fill_email_pass">Please Fill Email and Password!</string>
    <string name="my_tool">My Tools</string>
    <string name="name">Name :</string>
    <string name="cityyy">City :</string>
    <string name="phonee">Phone :</string>
    <string name="emaill">Email :</string>
    <string name="faild">Failed</string>
</resources>
