<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        tools:context=".LoginFragment">

        <TextView
            android:layout_marginTop="50dp"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:gravity="center"
            android:text="@string/login_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_marginTop="60dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:textColor="@android:color/black"
            android:background="@android:color/white"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="Sign in with google "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="35dp"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/or_sign_in_with_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="35dp"
            android:paddingLeft="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/white"
            android:textSize="20sp"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:inputType="textPassword"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/white"
            android:textSize="20sp"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:onClick="onLoginClick"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



        <LinearLayout
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:text="@string/don_t_have_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:onClick="switchToSignup"
                android:id="@+id/sign_upTv"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:text="@string/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>


    </LinearLayout>

</ScrollView>
