<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        tools:context=".LoginFragment">

        <TextView
            android:layout_marginTop="50dp"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:gravity="center"
            android:text="Sign up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <EditText
            android:id="@+id/name_signup"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="50dp"
            android:paddingLeft="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/white"
            android:textSize="20sp"
            android:hint="@string/full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/email_signup"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/white"
            android:textSize="20sp"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:inputType="textPassword"
            android:id="@+id/pass_signup"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/white"
            android:textSize="20sp"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:inputType="phone"
            android:id="@+id/phone_signup"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/white"
            android:textSize="20sp"
            android:hint="@string/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/city_signup"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/white"
            android:textSize="20sp"
            android:hint="@string/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <Button
            android:onClick="onSignupClicked"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <LinearLayout
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:text="@string/don_t_have_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textStyle="bold"
                android:onClick="switchToLogin"
                android:id="@+id/login_Tv"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:text="@string/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
