<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.CompleteSigninActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary">


        <TextView
            android:layout_marginTop="70dp"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:gravity="center"
            android:text="@string/continue_your_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:inputType="phone"
            android:id="@+id/phone_continue"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="80dp"
            android:paddingLeft="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/white"
            android:textSize="20sp"
            android:hint="@string/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/city_continue"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/white"
            android:textSize="20sp"
            android:hint="@string/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:onClick="onFinishClicked"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            android:layout_marginTop="50dp"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:text="@string/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>
