<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".ui.AddToolActivity">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="?colorPrimary">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_add_tool"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:titleTextAppearance="@style/Toolbar.TitleText"
                android:layout_gravity="bottom">

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/img_new_tool"
            android:background="@android:color/white"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <Button
                android:onClick="addPictureClicked"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@android:color/white"
                android:background="@color/colorAccent"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:text="@string/add_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/tv_new_tool"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="30dp"
                android:paddingLeft="10dp"
                android:background="@android:color/white"
                android:textSize="20sp"
                android:hint="@string/tool_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <CheckBox
                android:id="@+id/checkbox_new_tool"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/available"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:checked="true"/>

            <Button
                android:onClick="addToolClicked"
                android:layout_marginTop="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColor="@android:color/white"
                android:background="@color/colorAccent"
                android:textSize="20sp"
                android:layout_gravity="right"
                android:text="@string/add_tool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>




        </LinearLayout>
    </LinearLayout>

</LinearLayout>