<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".ui.ToolDetailsActivity">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="?colorPrimary">

            <androidx.appcompat.widget.Toolbar
                app:titleTextAppearance="@style/Toolbar.TitleText"
                android:id="@+id/toolbar_detail"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom">

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:adjustViewBounds="true"
                android:src="@drawable/ic_launcher_foreground"
                android:id="@+id/img_tool_detail"
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="260dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/tool_img" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:contentDescription="@string/owner_img"
                        android:id="@+id/img_owner"
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:src="@drawable/user_icon"/>

                    <TextView
                        android:id="@+id/tv_owner_name"
                        android:textColor="@android:color/white"
                        android:gravity="center"
                        android:textSize="28sp"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_owner_city"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_owner_email"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_owner_phone"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />



                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:onClick="onCallClick"
                        android:layout_weight="0.5"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:textColor="@android:color/white"
                        android:background="@color/colorAccent"
                        android:textSize="20sp"
                        android:layout_gravity="center"
                        android:text="@string/call"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

                    <Button
                        android:onClick="onAddWidgetClicked"
                        android:layout_weight="0.5"
                        android:layout_marginStart="25dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:textColor="@color/colorPrimary"
                        android:background="@android:color/white"
                        android:textSize="20sp"
                        android:layout_gravity="center"
                        android:text="@string/add_to_widget"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>


                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>